# focus-shield

./: .gitignore  .npmrc  .prettierignore  CLAUDE.md  PLAN-fondations.md  README.md  RECAP-blocking-debug.md  eslint.config.js  package.json  pnpm-lock.yaml  project.md  turbo.json  vitest.config.ts
.claude/: context-handoff.md  settings.json  team.md
.claude/rules/: architecture.md  branches.md  stability.md  testing.md
.claude/skills/desktop-dev/: SKILL.md
.claude/skills/extension-dev/: SKILL.md
.claude/skills/forge/: SKILL.md
.claude/skills/next-feature/: SKILL.md
.claude/skills/rodin/: SKILL.md
.claude/skills/rust-dev/: SKILL.md
.claude/skills/tester/: SKILL.md
.claude/skills/ts-package-dev/: SKILL.md
.github/workflows/: ci.yml  claude.yml  release.yml
apps/browser-extension/: STORE_LISTING.md  manifest.firefox.json  manifest.json  package.json  playwright.browsers.config.ts  playwright.config.ts  playwright.extension.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/browser-extension/dist-firefox/: manifest.json
apps/browser-extension/e2e/: blocked-page.spec.ts  blocking-pipeline.spec.ts  multi-browser-blocking.spec.ts  popup.spec.ts
apps/browser-extension/scripts/: build-firefox.js  package-chrome.sh  package-firefox.sh
apps/browser-extension/src/: quotes.ts
apps/desktop/: index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: analytics.spec.ts  home.spec.ts  pages.spec.ts  session-flow.spec.ts  session-lifecycle.spec.ts  settings.spec.ts  stats-persistence.spec.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/daemon/: Cargo.toml
apps/desktop/src-tauri/daemon/src/: client.rs  handler.rs  hosts_manager.rs  lib.rs  main.rs  privilege.rs  process_monitor.rs  process_watcher.rs  protocol.rs  server.rs  ws_server.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  session.rs
apps/desktop/src-tauri/src/commands/: daemon_commands.rs  knowledge_commands.rs  mod.rs  session_commands.rs  storage_commands.rs
apps/desktop/src-tauri/src/daemon/: manager.rs  mod.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/sync-server/: Dockerfile  docker-compose.yml  eslint.config.js  package.json  tsconfig.json
apps/web/: index.html  package.json
docs/: contributing.md  faq.md  getting-started.md  self-hosting.md  user-guide.md
scripts/: dev.sh  generate-icon.cjs  pre-merge-check.sh  quickstart.sh  setup.sh
(+151 files in other folders)
