[workspace]
members = [".", "daemon"]

[package]
name = "focus-shield-desktop"
version = "0.1.0"
edition = "2021"
description = "Focus Shield - Intelligent distraction blocker"

[package.metadata.tauri]
# Tauri package metadata

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "process"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
getrandom = "0.2"
argon2 = "0.5"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
focus-shield-daemon = { path = "daemon" }
