[package]
name = "focus-shield-daemon"
version = "0.1.0"
edition = "2021"
description = "Focus Shield daemon - system-level blocker sidecar"

[[bin]]
name = "focus-shield-daemon"
path = "src/main.rs"

[lib]
name = "focus_shield_daemon"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "signal"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
tokio-tungstenite = "0.24"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
